	- Consistently make the fg and bg colortype struct entries and
	  any variables used to hold them shorts.  Changes to
	  do_colorinit() (renamed color_init()), color_to_int() (renamed
	  color_to_short()), and parse_colors(). (DLR)
	- Change color handling to save only the extension and color
	  regex strings constantly,  and to actually compile them on an
	  as-needed basis. Changes to update_color(),
	  thanks_for_all_the_fish(), nregcomp(), parse_syntax(), and
	  parse_colors(). (Brand Huntsman and DLR)
	- Various other color fixes.  Handle unspecified foreground
	  colors properly, don't automatically reinitialize the
	  displayed colors every time we update the current buffer's
	  colors (since the buffer may not be displayed immediately),
	  don't bother doing complete refreshes of the screen when
	  color support is enabled if there's no regex associated with
	  the current file, and rename variable exttype->val to
	  exttype->ext, for consistency.  Changes to do_colorinit()
	  (renamed color_init()), update_color() (renamed
	  color_update()), write_file(), do_input(), do_output(), and
	  parse_syntax(). (DLR)
	- Simplify get_totals() to only get the total number of
	  characters, and eliminate dependence on its old ability to get
	  the total number of lines by renumber()ing when necessary and
	  using the number of the last line of a filestruct.  Changes to
	  read_file(), move_to_filestruct(), copy_from_filestruct(),
	  do_justify(), get_totals() (renamed get_totsize()), and
	  do_cursorpos(). (DLR)
	- Change the NANO_WIDE #define to ENABLE_UTF8, as the latter is
	  clearer. (DLR)
	- Minor history code fixes: Make sure that the current position
	  in the history list is properly set to the bottom if we cancel
	  out of the prompt, and that magichistory is properly updated
	  when we change it and then move up.  New function
	  history_reset(); changes to nanogetstr(). (DLR)
	- Various character-handling cleanups.  If we get an invalid