@@ -51,7 +51,9 @@ CVS code -
 	  color_to_short()), and parse_colors(). (DLR)
 	- Change color handling to save only the extension and color
 	  regex strings constantly,  and to actually compile them on an
-	  as-needed basis. Changes to update_color(),
+	  as-needed basis.  Also, make a color syntax specified on the
+	  command line override the syntax associated with the current
+	  file extension.  Changes to update_color(),
 	  thanks_for_all_the_fish(), nregcomp(), parse_syntax(), and
 	  parse_colors(). (Brand Huntsman and DLR)
 	- Various other color fixes.  Handle unspecified foreground
